# balinese-pos-tagger

./: LICENSE  README.md  demo.py  pyproject.toml
balinese_pos_tagger/: __init__.py  io.py  model.py  tagger.py
balinese_pos_tagger/resources/: idx2tag.json  model.pt  params.json  word2idx.json
balinese_pos_tagger/utils/: __init__.py  text_utils.py
dataset/: S1_dataset_sekunder.txt  S2_sekunder_refined.txt  S3_dataset_primer.txt  S4_dataset_gabungan.txt
